salesforce/ops-atlas/main/default/objects/OpsAtlas_Pillar__c/OpsAtlas_Pillar__c.object-meta.xml
<CustomObject>
    <label>OpsAtlas Pillar</label>
    <pluralLabel>OpsAtlas Pillars</pluralLabel>
    <nameField>
        <label>Pillar Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>