salesforce/ops-atlas/main/default/objects/OpsAtlas_Pillar__c/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <label>Head</label>
    <length>120</length>
    <type>Text</type>
</CustomField>