salesforce/ops-atlas/main/default/objects/OpsAtlas_Pillar__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <length>10</length>
    <type>Text</type>
</CustomField>