salesforce/ops-atlas/main/default/objects/OpsAtlas_Pillar__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <externalId>true</externalId>
    <label>Slug</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>